<resources>
    <string name="app_name">Food Runner</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="enter_your_name_min_3_characters">Enter your name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="deliveraddress">DeliverAddress</string>
    <string name="choose_a_password_min_4_characters">Choose a password(Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="you_have_entered_the_following_credentials">You have entered the following credentials:</string>
    <string name="logout">Logout</string>
    <string name="faqs">FAQs</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="higher_order_functionality">Higher Order Functionality</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_restaurants_to_favourite">Add restaurants to favourite!!</string>
    <string name="order_history">Order History</string>
    <string name="new_password_min_6_characters">New Password(Min. 6 characters)</string>
    <string name="otp_4_characters">OTP(4 Characters)</string>
    <string name="sort_ascending">Sort Ascending By Cost</string>
    <string name="sort_descending">Sort Descending By Cost</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="add">Add</string>
    <string name="sl_no">SL No.</string>
    <string name="place_order">Place Order</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="order_date">Order Date</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below: </string>
    <string name="total">Total:</string>


</resources>