<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_primary"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:src="@drawable/ic_drawer_logo" />


    <TextView
        android:id="@+id/tvNameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="4dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMobileNumberProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="4dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/mobile_number"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmailAddressProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="4dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/email_address"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDeliverAddressProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="4dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/delivery_address"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>