<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_primary"
    android:orientation="vertical"
    tools:context=".activity.ResetPassword">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="Enter the OTP received below:"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvMobileNumberForgotPasswordInfo"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:padding="10dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="16sp"-->
    <!--        android:textStyle="bold" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvEmailAddressForgotPasswordInfo"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:padding="10dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="16sp"-->
    <!--        android:textStyle="bold" />-->

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInfo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/otp_4_characters"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOtp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/new_password_min_6_characters"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmNewPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="Submit"
        android:textColor="@color/white" />


</RelativeLayout>